--- a/styles/third-section.css
+++ b/styles/third-section.css
@@ -43,6 +43,7 @@
   font-weight: 400;
   word-wrap: break-word; /* Evita desbordamientos */
   text-align: center;
+  text-wrap: balance;
 }
 
 .third-section-right button {
